updating using SonarLint as recommended